[gd_scene load_steps=8 format=3 uid="uid://me7klkfacpns"]

[ext_resource type="Theme" uid="uid://dqjc75de0xc2f" path="res://ui/main_menu/main.tres" id="1_mu8pm"]
[ext_resource type="Script" uid="uid://77myd02xbs8w" path="res://ui/main_menu/main_menu.gd" id="2_omy8q"]
[ext_resource type="PackedScene" uid="uid://yc5v8gijampa" path="res://ui/main_menu/local_menu.tscn" id="3_3c04x"]
[ext_resource type="PackedScene" uid="uid://dprx5y31v3hx3" path="res://ui/main_menu/primary_menu.tscn" id="3_joh67"]
[ext_resource type="PackedScene" uid="uid://dj7t3txa3ylbn" path="res://ui/main_menu/multiplayer_menu.tscn" id="4_joh67"]
[ext_resource type="PackedScene" uid="uid://btx75apydijlp" path="res://levels/basic_level/basic_level.tscn" id="5_u184e"]
[ext_resource type="PackedScene" uid="uid://pjkkv5x1uj5b" path="res://ui/network_lobby/network_lobby.tscn" id="6_joh67"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mu8pm")
script = ExtResource("2_omy8q")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.155
anchor_right = 0.5
anchor_bottom = 0.155
offset_left = -130.0
offset_top = 12.4
offset_right = 130.0
offset_bottom = 79.4
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "MultiSnake"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PrimaryMenu" parent="CenterContainer/MenuContainer" node_paths=PackedStringArray("_local_menu", "_multiplayer_menu") instance=ExtResource("3_joh67")]
unique_name_in_owner = true
layout_mode = 2
_local_menu = NodePath("../LocalMenu")
_multiplayer_menu = NodePath("../MultiplayerMenu")

[node name="LocalMenu" parent="CenterContainer/MenuContainer" instance=ExtResource("3_3c04x")]
unique_name_in_owner = true
visible = false
layout_mode = 2
_lobby_scene = ExtResource("5_u184e")

[node name="MultiplayerMenu" parent="CenterContainer/MenuContainer" instance=ExtResource("4_joh67")]
unique_name_in_owner = true
visible = false
layout_mode = 2
_lobby_path = ExtResource("6_joh67")

[node name="BackButton" type="Button" parent="CenterContainer/MenuContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Back"
